--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "mammoth": "^1.9.0",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.9",
     "openai": "^4.79.4",
-    "pdf-parse": "^1.1.1"
+    "pdf-parse": "^1.1.1",
+    "textract": "^2.5.0"
   }
 }
