--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.9",
     "openai": "^4.79.4",
+    "papaparse": "^5.5.2",
     "pdf-parse": "^1.1.1",
+    "pg": "^8.13.1",
     "textract": "^2.5.0"
   }
 }
